--- a/charts/mynodedb2/values.yaml
+++ b/charts/mynodedb2/values.yaml
@@ -92,7 +92,7 @@ service:
   externalPort: 80
   internalPort: 8080
   labels: {}
-  name: REPLACE_ME_APP_NAME
+  name: mynodedb2
   type: ClusterIP
 serviceAccount:
   annotations: {}
